update dependencies and migrate to Angular 20